changes made in courses.html

--- a/contact.html
+++ b/contact.html
@@ -64,13 +64,12 @@
     <link rel="stylesheet" href="static/css/index.css" />
   </head>
   <body class="bg-white text-gray-800">
-    <!-- Navigation Bar -->
+    
 
 
+      <!-- Navigation Bar -->
 
-    <nav
-      class="fixed top-0 left-0 w-full z-50 bg-[#fdf2d0] shadow-md px-6 py-4 flex justify-between items-center border-b-4 border-[#b7410e]"
-    >
+    <nav class="fixed top-0 left-0 w-full z-50 bg-[#fdf2d0] shadow-md px-6 py-4 flex justify-between items-center border-b-4 border-[#b7410e]">
       <div class="flex items-center space-x-6">
         <img
           src="static/images/logo-dark1.png"
@@ -134,6 +133,11 @@
           >Courses</a
         >
         <a
+        href="gallery.html"
+        class="text-[#3e2723] hover:text-[#b7410e] transition"
+        >Gallery</a
+      >
+        <a
           href="contact.html"
           class="text-[#3e2723] hover:text-[#b7410e] transition"
           >Contact</a
@@ -180,7 +184,7 @@
           <a href="index.html">Home</a>
           <a href="about.html">TablaGyan Academy</a>
           <a href="about.html#gurus">TablaGyan Gurus</a>
-       
+          <a href="gallery.html">Gallery</a>
           <a href="courses.html">Courses</a>
           <a href="contact.html">Contact</a>
           <a href="faq.html">FAQ</a>
