--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="index.js"></script>
 
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
@@ -71,7 +72,6 @@
     </style>
   </head>
   <body class="pt-28 bg-white text-gray-800">
-
     <!-- Navigation Bar -->
     <nav
       class="fixed top-0 left-0 w-full z-50 bg-[#fdf2d0] shadow-md px-6 py-4 flex justify-between items-center border-b-4 border-[#b7410e]"
@@ -131,12 +131,15 @@
           </div>
         </div>
 
-
-
         <a
           href="courses.html"
           class="text-[#3e2723] hover:text-[#b7410e] transition"
           >Courses</a
+        >
+        <a
+          href="gallery.html"
+          class="text-[#3e2723] hover:text-[#b7410e] transition"
+          >Gallery</a
         >
         <a
           href="contact.html"
@@ -185,7 +188,7 @@
           <a href="index.html">Home</a>
           <a href="about.html">TablaGyan Academy</a>
           <a href="about.html#gurus">TablaGyan Gurus</a>
-       
+          <a href="gallery.html">Gallery</a>
           <a href="courses.html">Courses</a>
           <a href="contact.html">Contact</a>
           <a href="faq.html">FAQ</a>
@@ -289,7 +292,7 @@
         </h2>
         <div class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-delay="100">
           <h3
-            class="text-2xl font-semibold mb-4 "
+            class="text-2xl font-semibold mb-4"
             style="font-family: 'Libre Baskerville', serif"
           >
             Highlights of Being a Part of TablaGyan Family
@@ -373,124 +376,103 @@
         </div>
       </section>
 
-
-<!-- TablaGyan Gurus Section -->
-<section
-  id="gurus"
-  class="py-16 bg-[#fffaf0] text-[#3e2723] px-4 sm:px-6 md:px-16"
->
-  <h2
-    class="text-2xl sm:text-3xl md:text-4xl font-bold mb-8 text-center text-[#7b1e1e] playfair-display"
-    data-aos="fade-up"
-    style="font-family: 'Cinzel', serif"
-  >
-    TablaGyan Gurus
-  </h2>
-  <div class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-delay="100">
-    <div class="flex justify-center mb-6">
-      <img
-        src="static/images/tabla-professor-2.jpeg"
-        alt="Dilip Puranik, Founder of TablaGyan"
-        class="w-40 h-40 sm:w-48 sm:h-48 md:w-56 md:h-56 rounded-full border-4 border-[#c69b58] shadow-xl object-cover"
-      />
-    </div>
-    <h3
-      class="text-xl sm:text-2xl font-semibold mb-4 text-center md:text-left playfair-display"
-    >
-      About <span class="text-[#7b1e1e]">Dilip Puranik</span>
-    </h3>
-    <p
-      class="mb-4 leading-relaxed open-sans"
-    >
-      The founder, architect, and teacher of TablaGyan –
-      <strong>Dilip Puranik</strong> has been deeply devoted to music from
-      a very young age. Having played tabla for over
-      <strong>25 years</strong>, his journey reflects dedication, pasión,
-      and a strong lineage of musical heritage.
-    </p>
-    <p
-      class="mb-4 leading-relaxed open-sans"
-    >
-      Born into a family of musicians, with his father
-      <strong>Shri Ramesh Puranik</strong> (harmonium player) and mother
-      <strong>Smt. Kasturi Puranik</strong> (natural singer), Dilip
-      Puranik grew up immersed in music. With the blessings of elders and
-      the grace of Goddess Saraswathi, he has carved a distinct identity
-      as both a performer and a teacher.
-    </p>
-    <h4
-      class="text-lg sm:text-xl font-semibold mb-2 playfair-display"
-    >
-      Gurus and Lineage
-    </h4>
-    <ul
-      class="list-disc list-inside mb-4 leading-relaxed open-sans"
-    >
-      <li>
-        Initial Taleem under
-        <strong>Pandit Prahlad Raj Mokashi</strong> (Dharwad) - Delhi &
-        Banaras Gharanas
-      </li>
-      <li>
-        Advanced Taleem under
-        <strong>Pandit Laxmeesh Rao</strong> (Sirsi), a Gurubandhu of
-        Ustad Zakir Hussain
-      </li>
-      <li>
-        Specialised training in Punjabi Gharana from senior disciples of
-        <strong>Ustad Alla Rakha</strong> (Abbaji, father of Ustad Zakir
-        Hussain)
-      </li>
-    </ul>
-    <h4
-      class="text-lg sm:text-xl font-semibold mb-2 playfair-display"
-    >
-      Achievements
-    </h4>
-    <ul
-      class="list-disc list-inside mb-4 leading-relaxed open-sans"
-    >
-      <li>
-        <strong>National Awardee - 2013</strong> for his contribution to
-        music
-      </li>
-      <li>Over 2 decades of active performances and teaching</li>
-    </ul>
-    <h4
-      class="text-lg sm:text-xl font-semibold mb-2 playfair-display"
-    >
-      Performance Experience
-    </h4>
-    <ul
-      class="list-disc list-inside mb-4 leading-relaxed open-sans"
-    >
-      <li>
-        Accompanied top vocalists and instrumentalists: flute, sitar, and
-        others
-      </li>
-      <li>
-        Versatile in accompanying
-        <strong>Classical Music, Light Music, Ghazals, Fusion</strong> and
-        more
-      </li>
-    </ul>
-    <h4
-      class="text-lg sm:text-xl font-semibold mb-2 playfair-display"
-    >
-      Vision Behind TablaGyan
-    </h4>
-    <p
-      class="mb-4 leading-relaxed open-sans"
-    >
-      TablaGyan is the realization of
-      <strong>Dilip Puranik’s dream</strong> to nurture musical talent in
-      young minds. For over a decade, he has grown this academy with care,
-      passion, and dedication. His vision is to contribute more towards
-      the art of music, fostering both tradition and innovation through
-      education.
-    </p>
-  </div>
-</section>
+      <!-- TablaGyan Gurus Section -->
+      <section
+        id="gurus"
+        class="py-16 bg-[#fffaf0] text-[#3e2723] px-4 sm:px-6 md:px-16"
+      >
+        <h2
+          class="text-2xl sm:text-3xl md:text-4xl font-bold mb-8 text-center text-[#7b1e1e] playfair-display"
+          data-aos="fade-up"
+          style="font-family: 'Cinzel', serif"
+        >
+          TablaGyan Gurus
+        </h2>
+        <div class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-delay="100">
+          <div class="flex justify-center mb-6">
+            <img
+              src="static/images/tabla-professor-2.jpeg"
+              alt="Dilip Puranik, Founder of TablaGyan"
+              class="w-40 h-40 sm:w-48 sm:h-48 md:w-56 md:h-56 rounded-full border-4 border-[#c69b58] shadow-xl object-cover"
+            />
+          </div>
+          <h3
+            class="text-xl sm:text-2xl font-semibold mb-4 text-center md:text-left playfair-display"
+          >
+            About <span class="text-[#7b1e1e]">Dilip Puranik</span>
+          </h3>
+          <p class="mb-4 leading-relaxed open-sans">
+            The founder, architect, and teacher of TablaGyan –
+            <strong>Dilip Puranik</strong> has been deeply devoted to music from
+            a very young age. Having played tabla for over
+            <strong>25 years</strong>, his journey reflects dedication, pasión,
+            and a strong lineage of musical heritage.
+          </p>
+          <p class="mb-4 leading-relaxed open-sans">
+            Born into a family of musicians, with his father
+            <strong>Shri Ramesh Puranik</strong> (harmonium player) and mother
+            <strong>Smt. Kasturi Puranik</strong> (natural singer), Dilip
+            Puranik grew up immersed in music. With the blessings of elders and
+            the grace of Goddess Saraswathi, he has carved a distinct identity
+            as both a performer and a teacher.
+          </p>
+          <h4 class="text-lg sm:text-xl font-semibold mb-2 playfair-display">
+            Gurus and Lineage
+          </h4>
+          <ul class="list-disc list-inside mb-4 leading-relaxed open-sans">
+            <li>
+              Initial Taleem under
+              <strong>Pandit Prahlad Raj Mokashi</strong> (Dharwad) - Delhi &
+              Banaras Gharanas
+            </li>
+            <li>
+              Advanced Taleem under
+              <strong>Pandit Laxmeesh Rao</strong> (Sirsi), a Gurubandhu of
+              Ustad Zakir Hussain
+            </li>
+            <li>
+              Specialised training in Punjabi Gharana from senior disciples of
+              <strong>Ustad Alla Rakha</strong> (Abbaji, father of Ustad Zakir
+              Hussain)
+            </li>
+          </ul>
+          <h4 class="text-lg sm:text-xl font-semibold mb-2 playfair-display">
+            Achievements
+          </h4>
+          <ul class="list-disc list-inside mb-4 leading-relaxed open-sans">
+            <li>
+              <strong>National Awardee - 2013</strong> for his contribution to
+              music
+            </li>
+            <li>Over 2 decades of active performances and teaching</li>
+          </ul>
+          <h4 class="text-lg sm:text-xl font-semibold mb-2 playfair-display">
+            Performance Experience
+          </h4>
+          <ul class="list-disc list-inside mb-4 leading-relaxed open-sans">
+            <li>
+              Accompanied top vocalists and instrumentalists: flute, sitar, and
+              others
+            </li>
+            <li>
+              Versatile in accompanying
+              <strong>Classical Music, Light Music, Ghazals, Fusion</strong> and
+              more
+            </li>
+          </ul>
+          <h4 class="text-lg sm:text-xl font-semibold mb-2 playfair-display">
+            Vision Behind TablaGyan
+          </h4>
+          <p class="mb-4 leading-relaxed open-sans">
+            TablaGyan is the realization of
+            <strong>Dilip Puranik’s dream</strong> to nurture musical talent in
+            young minds. For over a decade, he has grown this academy with care,
+            passion, and dedication. His vision is to contribute more towards
+            the art of music, fostering both tradition and innovation through
+            education.
+          </p>
+        </div>
+      </section>
 
       <!-- CTA Section -->
       <section class="py-12 bg-red-50">
@@ -621,11 +603,30 @@
         musicCursor.style.top = e.clientY + 25 + "px";
         musicCursor.style.opacity = 1;
       });
+
+      const music = document.getElementById("background-music");
+      const musicIcon = document.getElementById("music-icon");
+      let isPlaying = false;
+
+      function toggleMusic() {
+        if (isPlaying) {
+          music.pause();
+          musicIcon.src = "/static/volume-no.png"; // Change icon to 'off'
+        } else {
+          music.play();
+          musicIcon.src = "/static/volume-up.png"; // Change icon to 'on'
+        }
+        isPlaying = !isPlaying;
+      }
+
+      document
+        .getElementById("music-toggle")
+        .addEventListener("click", toggleMusic);
     </script>
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
-    <script src="index.js"></script>
+   
   </body>
 </html>
