modified photo gallery section in index.html

--- a/courses.html
+++ b/courses.html
@@ -769,7 +769,7 @@
               musicIcon.src = "/static/volume-up.png";
             } else {
               backgroundMusic.pause();
-              musicIcon.src = "/static/volume-off.png";
+              musicIcon.src = "/static/volume-no.png";
             }
           } catch (e) {
             console.warn("Music toggle failed:", e);
