--- a/index.html
+++ b/index.html
@@ -678,14 +678,14 @@
       <script>
         // Fixed array of 8 images in /static/frontpage/
         const images = [
-          "/static/frontpage/frontpage1.jpg",
-          "/static/frontpage/frontpage2.jpg",
+          "/static/frontpage/frontpage1.JPG",
+          "/static/frontpage/frontpage2.JPG",
           "/static/frontpage/frontpage3.jpeg",
-          "/static/frontpage/frontpage4.jpg",
-          "/static/frontpage/frontpage5.jpg",
-          "/static/frontpage/frontpage6.jpg",
-          "/static/frontpage/frontpage7.jpg",
-          "/static/frontpage/frontpage8.jpg",
+          "/static/frontpage/frontpage4.JPG",
+          "/static/frontpage/frontpage5.JPG",
+          "/static/frontpage/frontpage6.JPG",
+          "/static/frontpage/frontpage7.JPG",
+          "/static/frontpage/frontpage8.JPG",
         ];
         let currentIndex = 0;
 
