Update latest changes

--- a/contact.html
+++ b/contact.html
@@ -235,13 +235,13 @@
       </div>
       <!--conatct form-->
       <section
-        class="min-h-screen w-full flex flex-col lg:flex-row bg-[#FFF8F0] relative font-serif overflow-hidden pt-32 lg:pt-36"
+        class="min-h-screen w-full flex flex-col lg:flex-row bg-[#FFF8F0] relative font-serif overflow-hidden pt-24 lg:pt-32"
       >
         <div
           class="hidden lg:block relative w-1/2 h-auto overflow-hidden group"
         >
           <img
-            src="/static/images/tabla-professor-1.jpeg"
+            src="/static/images/contact-page.JPG"
             alt="Professor playing tabla"
             class="h-full w-full object-cover transition-transform duration-1000 group-hover:scale-105"
           />
@@ -649,7 +649,7 @@
                 </a>
 
                 <a
-                  href="https://wa.me/+919845395205"
+                  href="https://wa.me/+919845806205"
                   target="_blank"
                   class="group flex items-center justify-between bg-white border border-[#c69b58]/30 p-6 rounded-xl hover:border-transparent hover:shadow-lg transition-all duration-300 cursor-pointer relative overflow-hidden"
                 >
@@ -677,7 +677,7 @@
                       >
                       <span
                         class="text-lg font-serif font-semibold text-[#2a0a0a] group-hover:text-white"
-                        >+91 98453 95205</span
+                        >+91 98458 06205</span
                       >
                     </div>
                   </div>
@@ -750,7 +750,7 @@
                         class="font-semibold block text-[#2a0a0a] text-lg mb-1"
                         >TablaGyan Academy</span
                       >
-                      1234 Music Lane, Bengaluru<br />Karnataka 560034, India
+                      2nd Floor, 144-A, 2nd Main Rd, S.T. Bed, S T Bed Layout, Koramangala, Bengaluru, Karnataka 560047
                     </p>
                   </div>
                   <div class="flex items-center space-x-4">
@@ -767,7 +767,7 @@
                         d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
                       ></path>
                     </svg>
-                    <p class="text-base">contact@tablagyan.com</p>
+                    <p class="text-base">tablagyan@gmail.com</p>
                   </div>
                 </div>
 
@@ -1418,7 +1418,7 @@
               </div>
 
               <p
-                class="text-sm leading-relaxed text-[#5a4a42]"
+                class="text-lg leading-relaxed text-[#5a4a42]"
                 style="font-family: 'Hubballi', sans-serif"
               >
                 A sanctuary for rhythm seekers. Preserving the ancient tradition
@@ -1585,8 +1585,7 @@
                     </svg>
                   </div>
                   <span
-                    >1234 Music Lane, Bengaluru,<br />Karnataka 560034,
-                    India</span
+                    >2nd Floor, 144-A, 2nd Main Rd, S.T. Bed, S T Bed Layout, Koramangala, Bengaluru, Karnataka 560047</span
                   >
                 </li>
                 <li class="flex items-center group">
@@ -1607,7 +1606,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>+91 98453 95205</span>
+                  <span>+91 98458 06205</span>
                 </li>
                 <li class="flex items-center group">
                   <div
@@ -1627,7 +1626,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>contact@tablagyan.com</span>
+                  <span>tablagyan@gmail.com</span>
                 </li>
               </ul>
             </div>
