--- a/courses.html
+++ b/courses.html
@@ -38,7 +38,7 @@
       #pageWrapper {
         min-height: 100vh;
         visibility: visible;
-        padding-top: 80px;
+        padding-top: 40px;
       }
       .course-card {
         background-color: #fdf2d0;
@@ -205,7 +205,6 @@
           class="text-[#3B3B3B] hover:text-[#7b1e1e] transition-colors duration-300"
           >Contact</a
         >
-       
       </div>
 
       <input type="checkbox" id="menu-toggle" class="hidden" />
@@ -267,7 +266,6 @@
             class="hover:text-[#7b1e1e] py-2 border-b border-[#c69b58]/30"
             >Contact</a
           >
-          
         </div>
       </div>
     </nav>
@@ -280,7 +278,7 @@
       }
     </style>
     <!-- Page Content -->
-    <div id="pageWrapper">
+    <div id="pageWrapper" class="pageWrapper pt-40">
       <!-- Audio Element -->
       <audio
         id="background-music"
@@ -301,7 +299,7 @@
       <!-- Courses Section -->
 
       <section
-        class="py-16 bg-[#FFF8F0] text-[#5a4a42] px-4 md:px-16"
+        class="pt-8 md:pt-16 pb-16 bg-[#FFF8F0] text-[#5a4a42] px-4 md:px-16"
         id="courses"
       >
         <div class="text-center mb-12" data-aos="fade-up">
@@ -574,9 +572,8 @@
                       class="text-[#5a4a42] mb-4 leading-relaxed text-sm md:text-base"
                       style="font-family: 'Hubballi', sans-serif"
                     >
-                      Start your Music journey with foundational training in
-                      basic swaras and alankars to build a strong base and
-                      prepare your vocal chords for a melodious journey.
+                      Start your music journey with foundational training in
+                      basic swaras and alankars to build a strong, melodic base.
                     </p>
                     <ul
                       class="list-disc list-inside mb-6 text-[#5a4a42] text-sm md:text-base flex-grow"
@@ -761,8 +758,8 @@
                   class="text-[#FFF8F0]/80 text-lg leading-relaxed font-light"
                   style="font-family: 'Hubballi', sans-serif"
                 >
-                  Join our legacy of tradition and excellence. Let rhythm and
-                  melody transform your life today.
+                  Join our legacy of tradition and excellence. <br />
+                  Let rhythm and melody transform your life today.
                 </p>
               </div>
 
@@ -861,7 +858,7 @@
                 </div>
 
                 <p
-                  class="text-sm leading-relaxed text-[#5a4a42]"
+                  class="text-lg leading-relaxed text-[#5a4a42]"
                   style="font-family: 'Hubballi', sans-serif"
                 >
                   A sanctuary for rhythm seekers. Preserving the ancient
@@ -1028,8 +1025,8 @@
                       </svg>
                     </div>
                     <span
-                      >1234 Music Lane, Bengaluru,<br />Karnataka 560034,
-                      India</span
+                      >2nd Floor, 144-A, 2nd Main Rd, S.T. Bed, S T Bed Layout,
+                      Koramangala, Bengaluru, Karnataka 560047</span
                     >
                   </li>
                   <li class="flex items-center group">
@@ -1050,7 +1047,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <span>+91 98453 95205</span>
+                    <span>+91 98458 06205</span>
                   </li>
                   <li class="flex items-center group">
                     <div
@@ -1070,7 +1067,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <span>contact@tablagyan.com</span>
+                    <span>tablagyan@gmail.com</span>
                   </li>
                 </ul>
               </div>
