--- a/about.html
+++ b/about.html
@@ -146,7 +146,6 @@
           class="text-[#3B3B3B] hover:text-[#7b1e1e] transition-colors duration-300"
           >Contact</a
         >
-
       </div>
 
       <input type="checkbox" id="menu-toggle" class="hidden" />
@@ -208,7 +207,6 @@
             class="hover:text-[#7b1e1e] py-2 border-b border-[#c69b58]/30"
             >Contact</a
           >
-          
         </div>
       </div>
     </nav>
@@ -271,27 +269,37 @@
               >
                 <p>
                   <strong class="text-[#7b1e1e]">TablaGyan</strong> is not just
-                  a school—it's a <strong>sanctuary for rhythm seekers</strong>.
-                  Founded by a passionate percussionist, we focus on developing
-                  a deep-rooted understanding of tabla as both a solo and
-                  accompanying instrument. Our approach blends ancient
-                  discipline with creative freedom.
+                  a school—it's a
+                  <strong>sanctuary for rhythm and melody</strong>. Founded by a
+                  passionate percussionist, we cultivate a deep understanding of
+                  tabla as both a solo and accompanying instrument, while also
+                  nurturing the fundamentals of
+                  <strong>Indian classical singing</strong>. Students learn how
+                  voice and rhythm complement each other, creating a more
+                  grounded musical foundation.
                 </p>
+
                 <p>
-                  Whether you're an aspiring beginner or an advanced student
-                  aiming to refine your technique, our customized classes, jam
-                  sessions, and performance opportunities provide a holistic
-                  experience. We emphasize the cultural context of tabla —
-                  exploring its role in
-                  <em>Kathak, Bhajans, Ghazals,</em> and modern fusions.
+                  Whether you're starting your journey or polishing advanced
+                  skills, our customized classes, vocal–tabla coordination
+                  sessions, and performance opportunities offer a complete
+                  musical experience. We explore the cultural roots of Indian
+                  music — from
+                  <em>
+                    Classical Bandishes to Devotional Bhajans to contemporary
+                    Fusions to soothing Ghazals.</em
+                  >
+                  — helping you grow in both <strong>laya</strong> and
+                  <strong>sur</strong>.
                 </p>
                 <div
                   class="pl-6 border-l-4 border-[#c69b58] bg-white/50 py-2 rounded-r-lg"
                 >
                   <p class="italic font-medium text-[#7b1e1e] text-lg">
-                    "Join a community that values tradition, expression, and the
-                    joy of shared rhythm. At TablaGyan, we don’t just play beats
-                    — we live them."
+                    TablaGyan is built on the principle of
+                    <span class="text-[#a01616] font-semibold">
+                      “play the music, not the instrument.”
+                    </span>
                   </p>
                 </div>
               </div>
@@ -404,8 +412,8 @@
                   Multi-Instrumental
                 </h4>
                 <p class="text-[#5a4a42] text-sm">
-                  Holistic coaching in Tabla, Vocal & Harmonium for complete
-                  musicality.
+                  Holistic coaching in Tabla & Vocal for complete musicality and
+                  deeper musical understanding.
                 </p>
               </div>
               <div
@@ -514,7 +522,8 @@
                 </div>
                 <h4 class="text-lg font-bold text-[#2a0a0a] mb-2">Community</h4>
                 <p class="text-[#5a4a42] text-sm">
-                  Active forums, concert alerts, and a supportive peer group.
+                  Active forums, concert alerts, and a supportive peer group to
+                  stay inspired.
                 </p>
               </div>
             </div>
@@ -537,8 +546,7 @@
                   <div>
                     <h4 class="font-bold text-[#2a0a0a]">Ghar-Baithaks</h4>
                     <p class="text-sm text-[#5a4a42]">
-                      Intimate House-Concerts to unleash potential & feature
-                      upcoming Musicians.
+                      Intimate House-Concerts & feature upcoming Musicians.
                     </p>
                   </div>
                 </div>
@@ -588,7 +596,7 @@
                   ></div>
                   <div>
                     <h4 class="font-bold text-[#2a0a0a]">
-                      Music-Retreat Camps
+                      Music-Retreat Camps & workshops
                     </h4>
                     <p class="text-sm text-[#5a4a42]">
                       Fun-filled getaways to refresh musical learnings in
@@ -619,7 +627,7 @@
                 class="text-4xl md:text-5xl font-bold text-[#7b1e1e]"
                 style="font-family: 'Cinzel', serif"
               >
-                Our Guru
+                Our Gurus
               </h2>
               <div class="w-24 h-1 bg-[#c69b58] mx-auto mt-4"></div>
             </div>
@@ -648,7 +656,7 @@
                     <p
                       class="text-[#c69b58] tracking-widest uppercase text-sm font-bold"
                     >
-                      Founder & Architect
+                      Visionary Founder
                     </p>
                   </div>
                 </div>
@@ -662,12 +670,14 @@
                   </h4>
 
                   <p class="text-[#5a4a42] leading-relaxed mb-6 text-lg">
-                    Born into a family of musicians, Dilip Puranik has been
-                    devoted to the art of Tabla for over
-                    <span class="font-bold text-[#2a0a0a]">25 years</span>. Son
-                    of Shri Ramesh Puranik (harmonium) and Smt. Kasturi Puranik
-                    (vocalist), his journey reflects a perfect blend of divine
-                    grace and rigorous discipline.
+                    Shri. DILIP PURANIK is the visionary founder and principal
+                    architect of TablaGyan - Academy of Music. He has earned a
+                    distinguished place in Indian classical music as a
+                    <strong>performer, guru, and mentor</strong>, instrumental
+                    in spreading the art of tabla globally. Son of Shri Ramesh
+                    Puranik (harmonium) and Smt. Kasturi Puranik (vocalist), his
+                    journey reflects a perfect blend of divine grace and
+                    rigorous discipline.
                   </p>
 
                   <div
@@ -677,21 +687,24 @@
                       <h5
                         class="font-bold text-[#2a0a0a] uppercase tracking-wider text-sm mb-3 flex items-center"
                       >
-                        <span class="w-1 h-4 bg-[#c69b58] mr-2"></span> Lineage
-                        (Taleem)
+                        <span class="w-1 h-4 bg-[#c69b58] mr-2"></span> Gurus &
+                        Lineage (Taleem)
                       </h5>
                       <ul class="space-y-2 text-sm text-[#5a4a42]">
                         <li>
-                          • <strong>Pt. Prahlad Raj Mokashi</strong> (Delhi &
-                          Banaras)
+                          • Initial training under
+                          <strong>Pt. Prahlad Raj Mokashi</strong> (Delhi &
+                          Banaras Gharanas)
                         </li>
                         <li>
-                          • <strong>Pt. Laxmeesh Rao</strong> (Disciple of Ustad
-                          Zakir Hussain)
+                          • Later training in the
+                          <strong>Punjabi Gharana</strong> under
+                          <strong>Pt. Laxmeesh Rao</strong>
                         </li>
                         <li>
-                          • <strong>Punjabi Gharana</strong> (Senior disciples
-                          of Ustad Alla Rakha)
+                          • Currently taking guidance from
+                          <strong>Pandit Yogesh Samsi</strong>, a Gurubhai of
+                          Ustaad Zakir Hussain.
                         </li>
                       </ul>
                     </div>
@@ -701,12 +714,16 @@
                         class="font-bold text-[#2a0a0a] uppercase tracking-wider text-sm mb-3 flex items-center"
                       >
                         <span class="w-1 h-4 bg-[#c69b58] mr-2"></span>
-                        Accolades
+                        Accolades & Global Reach
                       </h5>
                       <ul class="space-y-2 text-sm text-[#5a4a42]">
-                        <li>• <strong>National Awardee (2013)</strong></li>
-                        <li>• 20+ Years Performance Experience</li>
-                        <li>• Master of Classical, Ghazal & Fusion</li>
+                        <li>• Aryabhata Awardee (2006)</li>
+                        <li>• National Award recipient (2012)</li>
+                        <li>
+                          • Accompanied many leading musicians across various
+                          genres.
+                        </li>
+                        <li>• 1000+ Students Nurtured Worldwide.</li>
                       </ul>
                     </div>
                   </div>
@@ -715,11 +732,109 @@
                     class="bg-[#FFF8F0] p-6 rounded-lg border-l-4 border-[#7b1e1e]"
                   >
                     <p class="italic text-[#7b1e1e] font-serif">
-                      "TablaGyan is the realization of a dream to nurture
-                      musical talent. My vision is to contribute to the art of
-                      music by fostering both tradition and innovation."
+                      "TablaGyan is my heart-child and a living realization of
+                      my dream—to nurture musical talent. I intend to enrich the
+                      art of music by honoring timeless traditions while
+                      embracing bold innovation, while carrying forward the
+                      legacy of my Gurus,"
                     </p>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="max-w-6xl mx-auto bg-white rounded-2xl shadow-2xl overflow-hidden border border-[#c69b58]/20 mt-16"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="flex flex-col lg:flex-row-reverse">
+                <div
+                  class="lg:w-2/5 bg-[#2a0a0a] relative group h-[400px] lg:h-auto min-h-[500px]"
+                >
+                  <img
+                    src="static/images/shantheri-kamath.jpeg"
+                    alt="Shantheri Kamath"
+                    class="absolute inset-0 w-full h-full object-cover opacity-90 group-hover:opacity-100 transition-opacity duration-500"
+                  />
+                  <div
+                    class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"
+                  ></div>
+
+                  <div class="absolute bottom-8 left-8 text-white">
+                    <h3 class="text-3xl font-bold font-serif mb-1">
+                      Shantheri Kamath
+                    </h3>
+                    <p
+                      class="text-[#c69b58] tracking-widest uppercase text-sm font-bold"
+                    >
+                      Music Teacher
+                    </p>
+                  </div>
+                </div>
+
+                <div class="lg:w-3/5 p-10 md:p-14 flex flex-col justify-center">
+                  <h4
+                    class="text-xl font-bold text-[#7b1e1e] mb-6"
+                    style="font-family: 'Cinzel', serif"
+                  >
+                    Voice of Dedication
+                  </h4>
+
+                  <p class="text-[#5a4a42] leading-relaxed mb-6 text-lg">
+                    Smt. SHANTHERI KAMATH is a dedicated music teacher at
+                    TablaGyan, bringing a rich background in Hindustani
+                    classical music to her students.
+                  </p>
+
+                  <div
+                    class="grid grid-cols-1 sm:grid-cols-2 gap-8 my-8 border-t border-b border-[#c69b58]/20 py-8"
+                  >
+                    <div>
+                      <h5
+                        class="font-bold text-[#2a0a0a] uppercase tracking-wider text-sm mb-3 flex items-center"
+                      >
+                        <span class="w-1 h-4 bg-[#c69b58] mr-2"></span> Gurus &
+                        Training
+                      </h5>
+                      <ul class="space-y-2 text-sm text-[#5a4a42]">
+                        <li>
+                          • Initial training in traditional Bhajan with her
+                          mother, Mythri Kamath.
+                        </li>
+                        <li>
+                          • Hindustani classical music under her uncle Shankar
+                          Shenoy.
+                        </li>
+                        <li>
+                          • Further guidance from
+                          <strong>Pt. Ramrao Nayak Goa</strong> and
+                          <strong>Pt. Parameshwar Hege</strong>.
+                        </li>
+                      </ul>
+                    </div>
+
+                    <div>
+                      <h5
+                        class="font-bold text-[#2a0a0a] uppercase tracking-wider text-sm mb-3 flex items-center"
+                      >
+                        <span class="w-1 h-4 bg-[#c69b58] mr-2"></span>
+                        Recognition & Experience
+                      </h5>
+                      <ul class="space-y-2 text-sm text-[#5a4a42]">
+                        <li>
+                          • B High (classical music) graded artist in AIR.
+                        </li>
+                        <li>• Recipient of numerous awards.</li>
+                        <li>• Winner of many music competitions.</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <p class="text-[#5a4a42] leading-relaxed text-lg italic">
+                    She has received rigorous training and dedicated many years
+                    to pursuing Hindustani classical music, embodying a profound
+                    commitment to her art and her students.
+                  </p>
                 </div>
               </div>
             </div>
@@ -755,8 +870,8 @@
                   class="text-[#FFF8F0]/80 text-lg leading-relaxed font-light"
                   style="font-family: 'Hubballi', sans-serif"
                 >
-                  Join our legacy of tradition and excellence. Let rhythm and
-                  melody transform your life today.
+                  Join our legacy of tradition and excellence. <br />Let rhythm
+                  and melody transform your life today.
                 </p>
               </div>
 
@@ -855,7 +970,7 @@
                 </div>
 
                 <p
-                  class="text-sm leading-relaxed text-[#5a4a42]"
+                  class="text-lg leading-relaxed text-[#5a4a42]"
                   style="font-family: 'Hubballi', sans-serif"
                 >
                   A sanctuary for rhythm seekers. Preserving the ancient
@@ -1022,8 +1137,8 @@
                       </svg>
                     </div>
                     <span
-                      >1234 Music Lane, Bengaluru,<br />Karnataka 560034,
-                      India</span
+                      >2nd Floor, 144-A, 2nd Main Rd, S.T. Bed, S T Bed Layout,
+                      Koramangala, Bengaluru, Karnataka 560047</span
                     >
                   </li>
                   <li class="flex items-center group">
@@ -1044,7 +1159,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <span>+91 98453 95205</span>
+                    <span>+91 98458 06205</span>
                   </li>
                   <li class="flex items-center group">
                     <div
@@ -1064,7 +1179,7 @@
                         ></path>
                       </svg>
                     </div>
-                    <span>contact@tablagyan.com</span>
+                    <span>tablagyan@gmail.com</span>
                   </li>
                 </ul>
               </div>
