--- a/gallery.html
+++ b/gallery.html
@@ -253,8 +253,8 @@
                 class="text-[#FFF8F0]/80 text-lg leading-relaxed font-light"
                 style="font-family: 'Hubballi', sans-serif"
               >
-                Join our legacy of tradition and excellence. Let rhythm and
-                melody transform your life today.
+                Join our legacy of tradition and excellence. <br />Let rhythm
+                and melody transform your life today.
               </p>
             </div>
 
@@ -353,7 +353,7 @@
               </div>
 
               <p
-                class="text-sm leading-relaxed text-[#5a4a42]"
+                class="text-lg leading-relaxed text-[#5a4a42]"
                 style="font-family: 'Hubballi', sans-serif"
               >
                 A sanctuary for rhythm seekers. Preserving the ancient tradition
@@ -520,8 +520,8 @@
                     </svg>
                   </div>
                   <span
-                    >1234 Music Lane, Bengaluru,<br />Karnataka 560034,
-                    India</span
+                    >2nd Floor, 144-A, 2nd Main Rd, S.T. Bed, S T Bed Layout,
+                    Koramangala, Bengaluru, Karnataka 560047</span
                   >
                 </li>
                 <li class="flex items-center group">
@@ -542,7 +542,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>+91 98453 95205</span>
+                  <span>+91 98458 06205</span>
                 </li>
                 <li class="flex items-center group">
                   <div
@@ -562,7 +562,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>contact@tablagyan.com</span>
+                  <span>tablagyan@gmail.com</span>
                 </li>
               </ul>
             </div>
